# sandbox

./: .gitignore  LICENSE.txt  README.md  moyuru-git.pub
amber/helloworld/: hello.ab
bun/db-performance-test/: .env  README.md  docker-compose.yml  drizzle.config.ts  package.json
bun/my-better-t-app/: AGENTS.md  README.md  bts.jsonc  package.json
c-lang/new/: main.c
cgapp/backend/: Makefile
cpp-lang/new/: main.cpp
cpp/sdl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
dart/hello-dart/: pubspec.yaml
db/ps-docker/: docker-compose.yml
deno/: hoge.ts
deno/Ultra-react-twind/: client.tsx  deno.json  importMap.json  server.tsx
deno/deno-random/: random.ts
deno/my-router-app/: package-lock.json  package.json
deno/python-deno/: deno.ts
deno/test-twi/: deno.json  main.ts
deno/wai/: main.ts
deno/wether-app/: area_type.ts  deno.jsonc  main.ts
deno/while-deno/: main.ts
docker-test/mysql/: create_meeting.sql  create_table.sql  docker-compose.yml  my.cnf
docker/cron/: Dockerfile  (+2 more)
nodejs-ts/: .gitignore  package.json
rust-lang/hello-actix/: .env  Cargo.toml  Makefile.toml  docker-compose.yml
rust-lang/hello-actix/.sqlx/: query-0ec33222992e1a7e14cb323629065c61d178ad9a0251dfe4443e55466813ecc9.json  query-b4b8a69f113234cb2199a5ac35224482d641d123820f023b0acde6753f9c2450.json
rust-lang/hello-actix/migrations/: 20230914133056_init.sql
rust-lang/hello-actix/src/: app_config.rs  main.rs  model.rs
rust-lang/hello-actix/src/api/: todo.rs
rust-lang/hello_browser/: Cargo.toml
rust-lang/hello_browser/src/: error.rs  main.rs
rust-lang/hello_browser/src/browser/: mod.rs
rust-lang/hello_browser/src/dom/: types.rs
rust-lang/hello_browser/src/layout/: mod.rs
rust-lang/hello_browser/src/net/: fetcher.rs
rust-lang/hello_browser/src/parse/: cssparser_adapter.rs  html5ever_adapter.rs  mod.rs
rust-lang/hello_browser/src/render/: mod.rs  tiny_skia_renderer.rs
rust-lang/hello_browser/src/style/: mod.rs
rust-lang/hello_browser/src/ui/: chrome.rs
rust-lang/my-todo-app/: Cargo.toml
rust-lang/my-todo-app/src/: main.rs
rust-lang/my-todo-app/src/api/: todo.rs  user.rs
syblick-test/: testfile.txt
test/: test.txt
(+1143 files in other folders)
