[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0.188", features = ["derive", "rc"] }
dotenv = "0.15.0"
actix-files = "0.6.2"
sqlx = { version = "0.7.1", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
