[package]
name = "my-todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
hyper = "0.14.24"
mime = "0.3.16"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
http-body = "0.4.3"
validator = { version = "0.14.0", features = ["derive"] }

